# plotjuggler_sdk

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CMakeLists.txt  LICENSE  PJ4_PLAN.md  README.md  V4_STORE.md  build.sh  conanfile.py  conanfile.txt  install_qt6.sh  pixi.toml  recipe.yaml  run_clang_tidy.sh  test_sdk_install.sh
data/: CMakeLists.txt  architecture_overview.md  conanfile.txt  dag-plan.md  data_implementation_plan.md  plotjuggler_siso_mimo_analysis.md
data/benchmarks/: ingest_benchmark.cpp  read_benchmark.cpp
data/examples/: parquet_import.cpp
data/src/: buffer.cpp  chunk.cpp  column_buffer.cpp  encoding.cpp  engine.cpp  query.cpp  reader.cpp  topic_storage.cpp  type_registry.cpp  writer.cpp
data/tests/: array_expansion_test.cpp  arrow_import_test.cpp  buffer_test.cpp  chunk_test.cpp  column_buffer_test.cpp  derived_engine_test.cpp  encoding_test.cpp  engine_integration_test.cpp  expected_test.cpp  query_test.cpp  span_test.cpp  topic_storage_test.cpp  type_registry_test.cpp  type_tree_test.cpp  types_test.cpp
examples/sdk_consumer/: CMakeLists.txt  manifest.json  minimal_data_source.cpp
pj_base/: CLAUDE.md  CMakeLists.txt
pj_base/abi/: baseline.abi
pj_base/src/: data_source_host_views.cpp  data_source_patterns.cpp  data_source_plugin_base.cpp  data_source_trampolines.cpp  number_parse.cpp  toolbox_plugin_base.cpp  toolbox_trampolines.cpp  type_tree.cpp
pj_base/tests/: abi_layout_sentinels_test.cpp  arrow_holders_test.cpp  asset_video_codec_test.cpp  builtin_object_test.cpp  camera_info_codec_test.cpp  compressed_point_cloud_codec_test.cpp  data_processors_api_test.cpp  data_source_plugin_base_test.cpp  data_source_protocol_test.cpp  depth_image_codec_test.cpp  expected_test.cpp  frame_transforms_codec_test.cpp  generators_api_test.cpp  image_annotations_codec_test.cpp  image_annotations_decoder_test.cpp  image_codec_test.cpp  log_codec_test.cpp  markers_api_test.cpp  media_metadata_test.cpp  mesh3d_codec_test.cpp  message_parser_plugin_base_test.cpp  notify_available_topics_test.cpp  number_parse_test.cpp  object_ingest_policy_test.cpp  occupancy_grid_codec_test.cpp  occupancy_grid_update_codec_test.cpp  platform_test.cpp  playback_viewport_api_test.cpp  plot_markers_codec_test.cpp  plugin_data_api_test.cpp  point_cloud_codec_test.cpp  poses_in_frame_codec_test.cpp  protobuf_wire_test_helpers.hpp  push_message_test.cpp  push_message_v2_test.cpp  scene_entities_codec_test.cpp  settings_store_host_test.cpp  span_test.cpp  time_spine_test.cpp  topic_subscription_extension_test.cpp  (+4 more)
pj_datastore/: CLAUDE.md  CMakeLists.txt
pj_datastore/benchmarks/: ingest_benchmark.cpp  read_benchmark.cpp
pj_datastore/docs/: ARCHITECTURE.md  OBJECT_STORE_DESIGN.md  REQUIREMENTS.md  USER_GUIDE.md  architecture_overview.md  dag-plan.md  data_implementation_plan.md
pj_datastore/examples/: parquet_import.cpp
pj_datastore/src/: arrow_import.cpp  buffer.cpp  builtin_transforms.cpp  chunk.cpp  colormap_registry.cpp  colormap_registry_host.cpp  column_buffer.cpp  derived_engine.cpp  encoding.cpp  engine.cpp  object_store.cpp  plugin_data_host.cpp  plugin_host_read.cpp  plugin_host_write.cpp  query.cpp  reader.cpp  topic_storage.cpp  type_registry.cpp  writer.cpp
pj_datastore/tests/: array_expansion_test.cpp  arrow_import_test.cpp  arrow_stream_round_trip_test.cpp  buffer_test.cpp  chunk_test.cpp  column_buffer_test.cpp  derived_engine_test.cpp  encoding_test.cpp  engine_integration_test.cpp  object_store_test.cpp  plugin_data_host_object_read_test.cpp  plugin_data_host_object_test.cpp  plugin_host_read_test.cpp  plugin_host_write_test.cpp  plugin_parser_object_write_test.cpp  query_test.cpp  regression_test.cpp  series_reader_test.cpp  topic_storage_test.cpp  type_registry_test.cpp
pj_marketplace/: CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp
pj_marketplace/documentation/: ARCHITECTURE.md  PLAN.md  REQUIREMENTS.md  SPRINT_PROPOSAL.md  TODO.md  USER_MANUAL.md  plotjuggler-marketplace-spec-v1.0.0-en.md
pj_marketplace/tests/: download_manager_test.cpp  extension_manager_check_plugin_management.cpp  extension_manager_test.cpp  registry_manager_test.cpp
pj_media/demos/: CMakeLists.txt  README.md  extract_frame.cpp  image_widget.hpp  mcap_helpers.hpp  mcap_image_viewer.cpp  mp4_video_viewer.cpp  multi_channel_viewer.cpp  simulated_stream.cpp  video_stream_demo.cpp
pj_media/mcap_player/: CMakeLists.txt  conanfile.txt  main.cpp  qoi.h  video_widget.hpp
pj_media/pj_media_core/: CMakeLists.txt
pj_media/pj_media_qt/: CMakeLists.txt
pj_plugins/: CLAUDE.md  CMakeLists.txt
pj_plugins/dialog_protocol/: CLAUDE.md  CMakeLists.txt
pj_plugins/docs/: ARCHITECTURE.md  PLAN.md  REQUIREMENTS.md  data-source-guide.md  dialog-plugin-guide.md  message-parser-guide.md  old_pj_plugins.md  toolbox-guide.md  toolbox_plan.md
pj_plugins/examples/: mock_data_source.cpp  mock_file_source.cpp  mock_json_parser.cpp  mock_schema_parser.cpp  mock_source_with_dialog.cpp  mock_toolbox.cpp
pj_plugins/src/: data_source_library.cpp  message_parser_library.cpp  plugin_catalog.cpp  plugin_runtime_catalog.cpp  toolbox_library.cpp
pj_plugins/tests/: data_source_handle_subscription_test.cpp  data_source_library_test.cpp  delegated_ingest_integration_test.cpp  describe_schema_columns_test.cpp  file_source_integration_test.cpp  invalid_optional_manifest_data_source_plugin.cpp  legacy_macro_dialog_plugin.cpp  message_parser_library_test.cpp  missing_id_data_source_plugin.cpp  missing_required_slots_plugin.cpp  mock_data_source_incompatible_low_plugin.cpp  mock_data_source_incompatible_plugin.cpp  mock_data_source_v2_plugin.cpp  object_ingest_policy_test.cpp  plugin_catalog_test.cpp  source_dialog_integration_test.cpp  static_manifest_dialog_plugin.cpp  static_namespaced_plugin_macros_test.cpp  toolbox_plugin_test.cpp
pj_proto_app/: CMakeLists.txt
pj_proto_app/src/: chart_panel.cpp  chart_panel.hpp  data_source_session.cpp  data_source_session.hpp  main_window.cpp  main_window.hpp  (+7 more)
pj_scene_protocol/: CMakeLists.txt
(+460 files in other folders)
